--- a/src/pages/SignIn/signin.scss
+++ b/src/pages/SignIn/signin.scss
@@ -32,3 +32,20 @@
   }
 }
 
+.user {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 3rem;
+  text-align: center;
+
+  img {
+    display: block;
+    width: 5rem;
+    height: 5rem;
+    border-radius: 100%;
+    border: 2px solid var(--primary);
+    margin-bottom: .2rem;
+  }
+}
+
